--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
-TODO.md
+private/
 data/
+
+# Disabling .devcontainer for now
+.devcontainer/ 
+.github/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
